--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Create my blog with nodejs",
   "main": "index.js",
   "scripts": {
-    "lint-staged": "lint-staged",
-    "prettier": "prettier --single-quote --trailing-comma all --tab-width 4 --write src/**/*.{js,json,scss}",
     "start": "nodemon --inspect src/index.js",
     "node-sass": "node-sass --watch src/resources/scss/ --output src/public/css/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "prettier --single-quote --trailing-comma all --tab-width 4 --write src/**/*.{js,json,scss}",
+    "lint-staged": "lint-staged"
   },
   "repository": {
     "type": "git",
