--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
   "scripts": {
     "start": "nodemon --inspect src/index.js",
     "node_sass": "node-sass --watch src/resources/scss/ --output src/public/css/",
-    "prettier": "prettier --single-quote --trailing-comma all --tab-width 4 --write src/**/*.{js,json,scss}",
-    "lint_staged": "lint-staged"
+    "format": "prettier --single-quote --trailing-comma all --tab-width 4 --write src/**/*.{js,json,scss}"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
   "repository": {
     "type": "git",
@@ -23,14 +30,6 @@
     "url": "https://github.com/itdvminh/nodejs_blog/issues"
   },
   "homepage": "https://github.com/itdvminh/nodejs_blog#readme",
-  "lint-staged": {
-    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
