--- a/package.json
+++ b/package.json
@@ -6,15 +6,12 @@
   "scripts": {
     "start": "nodemon --inspect src/index.js",
     "node_sass": "node-sass --watch src/resources/scss/ --output src/public/css/",
-    "format": "prettier --single-quote --trailing-comma all --tab-width 4 --write src/**/*.{js,json,scss}"
+    "test": "prettier --single-quote --trailing-comma all --tab-width 4 --write src/**/*.{js,json,scss}"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "prettier --write ."
+      "pre-commit": "test"
     }
-  },
-  "lint-staged": {
-    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
   },
   "repository": {
     "type": "git",
@@ -37,7 +34,6 @@
   },
   "devDependencies": {
     "husky": "^8.0.1",
-    "lint-staged": "^13.0.2",
     "morgan": "^1.10.0",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.16",
