--- a/package.json
+++ b/package.json
@@ -6,12 +6,7 @@
   "scripts": {
     "start": "nodemon --inspect src/index.js",
     "node_sass": "node-sass --watch src/resources/scss/ --output src/public/css/",
-    "test": "prettier --single-quote --trailing-comma all --tab-width 4 --write src/**/*.{js,json,scss}"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "test"
-    }
+    "prettier": "prettier --single-quote --trailing-comma all --tab-width 4 --write src/**/*.{js,json,scss}"
   },
   "repository": {
     "type": "git",
@@ -30,10 +25,11 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
-    "mongoose": "^6.4.0"
+    "mongoose": "^6.4.1"
   },
   "devDependencies": {
     "husky": "^8.0.1",
+    "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.10.0",
     "node-sass": "^7.0.1",
     "nodemon": "^2.0.16",
