--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "method-override": "^3.0.0",
     "mongoose": "^6.4.1"
   },
   "devDependencies": {
