--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "method-override": "^3.0.0",
-    "mongoose": "^6.4.1"
+    "mongoose": "^6.4.1",
+    "mongoose-delete": "^0.5.4"
   },
   "devDependencies": {
     "husky": "^8.0.1",
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.10.0",
     "node-sass": "^7.0.1",
-    "nodemon": "^2.0.16",
+    "nodemon": "^2.0.18",
     "prettier": "^2.7.1"
   }
 }
